refactor: change address model